manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <APP_NAME>
  namespace: default  
  labels:
    app: <APP_NAME>
    # app.kubernetes.io/name: "flask-store"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: <APP_NAME>
  template:
    metadata:
      labels:
        app: <APP_NAME>
      # annotations:
      #   app.kubernetes.io/name: "flask-store"
        # eks.amazonaws.com/fargate-profile: "default"
    spec:
      containers:
      - name: <APP_NAME>
        image: <ECR_REGISTRY>/<ECR_REPOSITORY>:v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: <APP_NAME>
  namespace: default
  labels:
    app: <APP_NAME>
spec:
  type: ClusterIP
  selector:
    app: <APP_NAME>
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
