manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  labels:
    app: flask-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: "/users"
    alb.ingress.kubernetes.io/healthcheck-port: "5000"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: flask-app
                port:
                  number: 80
